# TeleSimCore

./: .clang-format  .gitignore  CMakeLists.txt  README.md  astuces.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/app/: main.cpp
src/core/: TransmissionPipeline.cpp  TransmissionPipeline.hpp
src/core/channel/: AwgnChannel.cpp  AwgnChannel.hpp  IChannel.hpp
src/core/modulation/: BpskDemodulator.cpp  BpskDemodulator.hpp  BpskModulator.cpp  BpskModulator.hpp  IDemodulator.hpp  IModulator.hpp  QpskDemodulator.cpp  QpskDemodulator.hpp  QpskModulator.cpp  QpskModulator.hpp  placeholder.cpp
tests/: CMakeLists.txt
tests/integration/: test_bpsk_chain.cpp  test_bpsk_qpsk_chain.cpp  test_qpsk_chain.cpp
tests/mocks/: PerfectChannel.hpp
tests/unit/: test_awgn_channel.cpp  test_bpsk_demodulator.cpp  test_bpsk_modulator.cpp  test_placeholder.cpp  test_qpsk_demodulator.cpp  test_qpsk_modulator.cpp  test_transmission_pipeline.cpp
